--- a/文本笔记/类和对象.md
+++ b/文本笔记/类和对象.md
@@ -46,4 +46,23 @@
 
 	浅拷贝：简单的赋值操作。      深拷贝：在堆区申请空间，进行拷贝赋值操作
 
-	
+9.静态成员 （就是多加个关键字static）
+
+	静态成员变量：所有对象共享一份数据:  A对象改成100，B用这个数据的时候也是100
+	 		     在编译阶段分配内存  ，分配到了全局区
+ 			     类内声明，类外初始化，必须得有初始值
+
+	静态成员函数：所有对象共享一个函数，静态成员函数只能访问静态成员变量
+
+10.在c++中，成员变量和成员函数分开存储。只有非静态成员变量才属于类的对象。
+
+11.this指针。
+
+	场景：许多类成员调用类的函数，怎么区分哪个成员调用的函数，用this指针。this指针指向被调用的成员函数所属的对象。  谁调用类函数，this就指向哪个成员。
+
+	this指针是隐含于每一个非静态成员函数内的一种指针。 不需要被定义，直接使用即可。
+
+	用途：当形参和成员变量同名时，用this指针来区分。
+
+	在类的非静态陈冠函数中返回本身，可使用return *this
+
